<resources>
    <string name="app_name">Oyster</string>
    <string name="splash">Splash</string>
    <string name="sign_in">Sign In</string>
    <string name="projects_internship_search"><![CDATA[Projects & Internship Search]]></string>
    <string name="my_internships">My Internships</string>
    <string name="my_profile">My Profile</string>
    <string name="notifications">Notifications</string>
    <string name="certificates">Certificates</string>
    <string name="testimonials">Testimonials</string>
    <string name="my_referals">My Referals</string>
    <string name="help">Help</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_your_registered_email_id_or_mobile_number_to_generate_otp">Please enter your registered email id or mobile number to generate OTP</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="enter_received_otp_to_reset_the_password">Enter received OTP to reset the Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_enter_your_new_password">Please enter your new Password</string>
    <string name="re_type_password">Re-type password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="you_are_currently_working_on_below_internships">You are currently working on below internships</string>
    <string name="not_working">You are currently not working on any internships</string>
    <string name="company_name">Company Name :</string>
    <string name="enter_location_to_search_internship">Enter location to search internship</string>
    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="select_type">Select Type</string>
    <string name="apply">Apply</string>
    <string name="web_application">If you want to edit other \n details of your profile, please \nlogin to the web application</string>
    <string name="rewards_benifits"><![CDATA[Rewards & Benifits]]></string>
    <string name="education_level">Education Level</string>
    <string name="duration">Duration</string>


</resources>
